--- a/trabalho/src/main/resources/app/retiradaVeiculo.fxml
+++ b/trabalho/src/main/resources/app/retiradaVeiculo.fxml
@@ -43,13 +43,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.RetiradaVeiculoController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
         <Menu mnemonicParsing="false" text="Menu">
           <items>
-            <MenuItem mnemonicParsing="false" text="Menu" />
+            <MenuItem mnemonicParsing="false" onAction="#voltarAoMenu" text="Menu" />
           </items>
         </Menu>
       </menus>
@@ -64,11 +64,11 @@
             <Label layoutX="204.0" layoutY="107.0" text="Motorista" />
             <Label layoutX="205.0" layoutY="156.0" prefHeight="18.0" prefWidth="44.0" text="Veículo" />
             <Label layoutX="201.0" layoutY="212.0" prefHeight="18.0" prefWidth="52.0" text="Retirada" />
-            <ChoiceBox layoutX="282.0" layoutY="103.0" prefWidth="150.0" />
-            <ChoiceBox layoutX="282.0" layoutY="152.0" prefWidth="150.0" />
-            <DatePicker layoutX="282.0" layoutY="208.0" prefHeight="26.0" prefWidth="150.0" />
-            <Button layoutX="282.0" layoutY="276.0" mnemonicParsing="false" text="Cancelar" />
-            <Button layoutX="357.0" layoutY="276.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="62.0" text="Gravar" />
+            <ChoiceBox fx:id="escolhaMotorista" layoutX="282.0" layoutY="103.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="escolhaVeiculo" layoutX="282.0" layoutY="152.0" prefWidth="150.0" />
+            <DatePicker fx:id="dataRetirada" layoutX="282.0" layoutY="208.0" prefHeight="26.0" prefWidth="150.0" />
+            <Button layoutX="275.0" layoutY="276.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" onAction="#voltarAoMenu" text="Cancelar" />
+            <Button layoutX="357.0" layoutY="276.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" text="Registrar" />
          </children>
     </AnchorPane>
   </children>
